--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.3.4",
     "navigo": "^8.11.1",
     "parcel": "^2.5.0",
     "yargs-parser": ">=13.1.2"
