--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.1",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
+    "module_name": "^1.0.0",
     "mongoose": "^6.3.4",
     "navigo": "^8.11.1",
     "parcel": "^2.5.0",
