--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
     "serve": "parcel index.html",
     "app:watch": "nodemon --watch ./server -e js ./server/app.js",
-    "start": "node ./server/app.js"
+    "start": "node ./server/app.js",
+    "start": "nodemon server/index.js",
+	  "start:server": "node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,14 +26,17 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "html-literal": "^1.1.0",
+    "http": "^0.0.1-security",
     "lodash": "^4.17.21",
     "module_name": "^1.0.0",
-    "mongoose": "^6.3.4",
+    "mongoose": "^6.3.6",
     "navigo": "^8.11.1",
     "parcel": "^2.5.0",
+    "socket.io": "^4.5.1",
     "yargs-parser": ">=13.1.2"
   }
 }
